...
      }}
    >
      <Tabs.Screen
        name="(0_home)"
        options={{
          title: 'Home',
          tabBarAccessibilityLabel: 'Home, tab, 1 of 4',
          tabBarLabel: ({ focused }) => <TabLabel label="Home" focused={focused} />,
          tabBarIcon: ({ color, focused }) => (
            <House size={22} color={color} strokeWidth={focused ? 2 : 1.5} />
          ),
        }}
        listeners={{
...
        }}
      />
      <Tabs.Screen
        name="(3_profile)"
        options={{
          title: 'Profile',
          tabBarAccessibilityLabel: 'Profile, tab, 4 of 4',
          tabBarLabel: ({ focused }) => <TabLabel label="Profile" focused={focused} />,
          tabBarIcon: ({ color, focused }) => (
            <UserRound size={22} color={color} strokeWidth={focused ? 2 : 1.5} />
          ),
        }}
        listeners={{
...
